test/Fail/Issue2594.err
Issue2594.agda:15.1-16.16: error: [CoverageIssue]
Incomplete pattern matching for argh. Missing cases:
  argh true x
when checking the definition of argh
